added landing page and nav html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Aleo:wght@100..900&family=Josefin+Sans:wght@100..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Bhromaon</title>
+
 </head>
 <body>
-    
+    <header>
+        <div class="landing-page">
+                <ul class="landing-page-container">
+                    <li class="landing-page-title">BHROMAON</li>
+                    <li class="landing-page-teext">Safe Travel Anywhere</li><br><br>
+                    <div class="search-continer">
+                        <form>
+                            <input type="text" placeholder="Search Your Travel Destination">
+                            <button class="search-button" type="submit">SEARCH</button>
+                        </form><br>
+                        <div class="scroll-down">Scroll Down</div>
+                        <i class="fa-sharp-duotone fa-solid fa-chevron-down"></i>
+                    </div> 
+                </ul>
+
+        </div>
+            
+    </header>
+
+    <nav class="navigation">
+        <div class="nav-input">
+            <div class="logo">BHROMON</div>
+            <ul class="ul-middle">
+                <li><a href="">WHO WE ARE</a></li>
+                <li><a href="">WHAT WE DO</a></li>
+                <li><a href="">TRAVEL WITH US</a></li>
+                <li><a href="">CONTACT US</a></li>
+            </ul>
+        </div>
+     </nav>
+
+
 </body>
 </html>
