added html for sections

--- a/index.html
+++ b/index.html
@@ -3,44 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bhromaon</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Aleo:wght@100..900&family=Josefin+Sans:wght@100..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Bhromaon</title>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
     <header>
         <div class="landing-page">
-                <ul class="landing-page-container">
-                    <li class="landing-page-title">BHROMAON</li>
-                    <li class="landing-page-teext">Safe Travel Anywhere</li><br><br>
-                    <div class="search-continer">
-                        <form>
-                            <input type="text" placeholder="Search Your Travel Destination">
-                            <button class="search-button" type="submit">SEARCH</button>
-                        </form><br>
-                        <div class="scroll-down">Scroll Down</div>
-                        <i class="fa-sharp-duotone fa-solid fa-chevron-down"></i>
-                    </div> 
-                </ul>
-
-        </div>
-            
-    </header>
-
-    <nav class="navigation">
-        <div class="nav-input">
-            <div class="logo">BHROMON</div>
-            <ul class="ul-middle">
-                <li><a href="">WHO WE ARE</a></li>
-                <li><a href="">WHAT WE DO</a></li>
-                <li><a href="">TRAVEL WITH US</a></li>
-                <li><a href="">CONTACT US</a></li>
+            <ul class="landing-page-container">
+                <li class="landing-page-title">BHROMAON</li>
+                <li class="landing-page-text">Safe Travel Anywhere</li>
+                <div class="search-container">
+                    <form>
+                        <input type="text" placeholder="Search Your Travel Destination">
+                        <button class="search-button" type="submit">SEARCH</button>
+                    </form>
+                    <div class="scroll-down">
+                        Scroll Down
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </div>
+                </div> 
             </ul>
         </div>
-     </nav>
-
-
+    </header>
+    <nav class="navigation">
+        <div class="nav-container">
+            <div class="logo">BHROMAON</div>
+            <ul class="nav-links">
+                <li><a href="#">WHO WE ARE</a></li>
+                <li><a href="#">WHAT WE DO</a></li>
+                <li><a href="#">TRAVEL WITH US</a></li>
+                <li><a href="#">CONTACT US</a></li>
+            </ul>
+        </div>
+    </nav>
+    <section class="about-section">
+        <div class="about-container">
+            <div class="about-text">
+                <h2>Why Choose Us</h2>
+                <p>People often get misled by the charm of pleasure at the moment, so blinded by desire that they cannot foresee the consequences of their actions.</p>
+                <button class="discover-button">EXPLORE PLACES</button>
+            </div>
+            <div class="about-images">
+                <img src="/images/whychooseus-img1.png" alt="landscape" class="first-image">
+                <img src="/images/whychooseus-img2.png" alt="view" class="second-image">
+            </div>
+        </div>
+    </section>
+    <section class="process-section">
+        <div class="process-container">
+            <div class="process-box find-step">
+                <i class="fa-solid fa-magnifying-glass icon-blue"></i>
+                <p>Find Places</p>
+            </div>
+            <div class="process-box pick-step">
+                <i class="fa-regular fa-circle-check icon-red"></i>
+                <p>Pick Places</p>
+            </div>
+            <div class="process-box reserve-step">
+                <i class="fa-regular fa-thumbs-up icon-blue"></i>
+                <p>Reserve & Enjoy</p>
+            </div>
+        </div>
+    </section>
+    <section class="grand-section">
+        <div class="destination-container">
+            <div class="destination-country">Spain</div>
+            <div class="destination-title">GRAND SPAIN MADRID</div>
+            <p class="destination-description">But I must explain to you how this mistaken idea of denouncing pleasure and praising pain was born, and I will give you a complete account of the system.</p>
+            <button class="action-btn">BOOK NOW</button>
+        </div>
+    </section>
+    <section class="grand-section-2">
+        <div class="destination-container alt-layout">
+            <div class="destination-country">Spain</div>
+            <div class="destination-title">GRAND SPAIN MADRID</div>
+            <p class="destination-description">But I must explain to you how this mistaken idea of denouncing pleasure and praising pain was born, and I will give you a complete account of the system.</p>
+            <button class="action-btn">BOOK NOW</button>
+        </div>
+    </section>
+    <section class="review-section">
+        <div class="review-container">
+            <h2>What Our Travelers Say</h2>
+            <div class="review-content">
+                <div class="review-image">
+                    <img src="/images/feedback-img.png" alt="Traveler enjoying the view">
+                </div>
+                <div class="review-text">
+                    <div class="quote-box">
+                        <h3 class="traveler-name">SAM SUMON</h3>
+                        <p>
+                            <i class="fa-solid fa-quote-left"></i> But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born, and I will give you a complete account of the system.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
