added styling to landing page

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bhromaon</title>
+    <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Aleo:wght@100..900&family=Josefin+Sans:wght@100..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
 </head>
 <body>
+
+    <!-- Header Section -->
     <header>
         <div class="landing-page">
             <ul class="landing-page-container">
@@ -17,16 +21,19 @@
                 <div class="search-container">
                     <form>
                         <input type="text" placeholder="Search Your Travel Destination">
-                        <button class="search-button" type="submit">SEARCH</button>
+                        <button class="search-button" type="submit">SEARCH       <i class="fas fa-search"></i> 
+                        </button>
                     </form>
                     <div class="scroll-down">
                         Scroll Down
-                        <i class="fa-solid fa-chevron-down"></i>
+                        <i class="fa-sharp-duotone fa-solid fa-chevron-down"></i>
                     </div>
                 </div> 
             </ul>
         </div>
     </header>
+
+    <!-- Navigation -->
     <nav class="navigation">
         <div class="nav-container">
             <div class="logo">BHROMAON</div>
@@ -38,6 +45,8 @@
             </ul>
         </div>
     </nav>
+
+    <!-- Why Choose Us -->
     <section class="about-section">
         <div class="about-container">
             <div class="about-text">
@@ -51,6 +60,8 @@
             </div>
         </div>
     </section>
+
+     <!-- Find Pick Reserve -->
     <section class="process-section">
         <div class="process-container">
             <div class="process-box find-step">
@@ -67,6 +78,8 @@
             </div>
         </div>
     </section>
+
+    <!-- Grand Section -->
     <section class="grand-section">
         <div class="destination-container">
             <div class="destination-country">Spain</div>
@@ -75,6 +88,8 @@
             <button class="action-btn">BOOK NOW</button>
         </div>
     </section>
+
+    <!-- Grand Section 2 -->
     <section class="grand-section-2">
         <div class="destination-container alt-layout">
             <div class="destination-country">Spain</div>
@@ -83,6 +98,8 @@
             <button class="action-btn">BOOK NOW</button>
         </div>
     </section>
+
+    <!-- Traveler Review Section -->
     <section class="review-section">
         <div class="review-container">
             <h2>What Our Travelers Say</h2>
@@ -101,5 +118,28 @@
             </div>
         </div>
     </section>
+
+
+    <!--Footer-->
+    <footer>
+        <div class="footer-container">
+            <div class="footer-box">
+                <div class="footer-brand">
+                    <h3 class="footer-logo">BHROMAON</h3>
+                    <p class="footer-text">Safe Travel Anywhere</p>
+                </div>
+                <div class="footer-social-icons">
+                    <ul class="social-icon-list">
+                        <li><i class="fa-brands fa-facebook-f"></i></li>
+                        <li><i class="fa-brands fa-twitter"></i></li>
+                        <li><i class="fa-brands fa-linkedin-in"></i></li>
+                        <li><i class="fa-brands fa-youtube"></i></li>
+                        <li><i class="fa-brands fa-pinterest"></i></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    
 </body>
 </html>
