added nav styles

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="search-container">
                     <form>
                         <input type="text" placeholder="Search Your Travel Destination">
-                        <button class="search-button" type="submit">SEARCH       <i class="fas fa-search"></i> 
+                        <button class="search-button" type="submit">SEARCH       <i class="fas fa-search"></i> <!-- Arama simgesi ekleniyor -->
                         </button>
                     </form>
                     <div class="scroll-down">
@@ -34,17 +34,18 @@
     </header>
 
     <!-- Navigation -->
-    <nav class="navigation">
+      <!-- navigation -->
+      <nav class="navigation">
         <div class="nav-container">
             <div class="logo">BHROMAON</div>
-            <ul class="nav-links">
-                <li><a href="#">WHO WE ARE</a></li>
-                <li><a href="#">WHAT WE DO</a></li>
-                <li><a href="#">TRAVEL WITH US</a></li>
-                <li><a href="#">CONTACT US</a></li>
+            <ul class="nav-list">
+                <li><a href="">WHO WE ARE</a></li>
+                <li><a href="">WHAT WE DO</a></li>
+                <li><a href="">TRAVEL WITH US</a></li>
+                <li><a href="">CONTACT US</a></li>
             </ul>
         </div>
-    </nav>
+     </nav>
 
     <!-- Why Choose Us -->
     <section class="about-section">
