added why choose us style

--- a/index.html
+++ b/index.html
@@ -51,10 +51,13 @@
     <section class="about-section">
         <div class="about-container">
             <div class="about-text">
-                <h2>Why Choose Us</h2>
-                <p>People often get misled by the charm of pleasure at the moment, so blinded by desire that they cannot foresee the consequences of their actions.</p>
-                <button class="discover-button">EXPLORE PLACES</button>
+                <h2 class="about-title">Why Choose Us</h2>
+                <div class="about-paragraph">
+                    <p>Tion and dislike men who are so beguiled and demoralized by desire by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee</p>
+                    <p>Ddislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that.</p>
+                    <button class="discover-button">EXPLORE PLACES</button>
             </div>
+        </div>
             <div class="about-images">
                 <img src="/images/whychooseus-img1.png" alt="landscape" class="first-image">
                 <img src="/images/whychooseus-img2.png" alt="view" class="second-image">
