added review and footer styles

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
 
     <!-- Navigation -->
-      <!-- navigation -->
+    
       <nav class="navigation">
         <div class="nav-container">
             <div class="logo">BHROMAON</div>
@@ -53,8 +53,8 @@
             <div class="about-text">
                 <h2 class="about-title">Why Choose Us</h2>
                 <div class="about-paragraph">
-                    <p>Tion and dislike men who are so beguiled and demoralized by desire by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee</p>
-                    <p>Ddislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that.</p>
+                    <p class="about-paragraph-p">Tion and dislike men who are so beguiled and demoralized by desire by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee</p>
+                    <p class="about-paragraph-p">Ddislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that.</p>
                     <button class="discover-button">EXPLORE PLACES</button>
             </div>
         </div>
@@ -70,15 +70,15 @@
         <div class="process-container">
             <div class="process-box find-step">
                 <i class="fa-solid fa-magnifying-glass icon-blue"></i>
-                <p>Find Places</p>
+                <p>Search Places</p>
             </div>
             <div class="process-box pick-step">
                 <i class="fa-regular fa-circle-check icon-red"></i>
-                <p>Pick Places</p>
+                <p>Select Places</p>
             </div>
             <div class="process-box reserve-step">
                 <i class="fa-regular fa-thumbs-up icon-blue"></i>
-                <p>Reserve & Enjoy</p>
+                <p>Book & Enjoy</p>
             </div>
         </div>
     </section>
@@ -106,7 +106,7 @@
     <!-- Traveler Review Section -->
     <section class="review-section">
         <div class="review-container">
-            <h2>What Our Travelers Say</h2>
+            <h2 class="review-container-h2">What Our Tourits Say</h2>
             <div class="review-content">
                 <div class="review-image">
                     <img src="/images/feedback-img.png" alt="Traveler enjoying the view">
@@ -115,7 +115,7 @@
                     <div class="quote-box">
                         <h3 class="traveler-name">SAM SUMON</h3>
                         <p>
-                            <i class="fa-solid fa-quote-left"></i> But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born, and I will give you a complete account of the system.
+                            <i class="fa-solid fa-quote-left"></i> But I must explain to you how all this mistaken idea of account to denouncinpleasure and praising pain  But I must explain to you how all this mistaken idea of account to nai denouncing pleasure and praising pain was account  born and I account will give you a complete account of the system was account  born and I account will give you a nai the complete account of the system
                         </p>
                     </div>
                 </div>
